Changed the Readme.md

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,11 @@
 == README
 
+The is my first Ruby on Rails App!
+==================================
+
+I'm excited about how this will go
+----------------------------------
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
